--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
             <input type="button" value="Submit">
             <input type="button" value="Reset">
         </fieldset>
+        <h2>Thank You!</h2>
     </form>
 </body>
 
